fix: sidebar menu. @dhilipsiva this was simple :stuck_out_tongue:

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -67,3 +67,10 @@ $FreestyleGuide-color--background: $background
 .logo-img
   margin: 0 auto
   width: 100%
+
+/* TODO: Remove these two before updating bohemia
+.menu-list
+  display: block
+
+.side-menu
+  margin-left: 0px
